adds my cv data

--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -38,16 +38,16 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo{./examples/profile.png}
-\name{Alexander}{Lelidis}
-\position{Software Engineer{\enskip\cdotp\enskip} Researcher {\enskip\cdotp\enskip}General computer scientist}
-\address{Bülachstr. 7 c, 8057 Zurich, Switzerland\\ 31.05.1994}
-\mobile{(+41) 768286993}
-\email{alex.lexus.info@gmail.com}
-\homepage{www.alexus37.github.io}
-\github{alexus37}
-\linkedin{alexander-lelidis-445842b6}
+\name{Florian}{Vallen}
+\position{Software Engineer{\enskip\cdotp\enskip} Web Developer}
+\address{Karl Marx Str. 277, 12057 Berlin, Germany}
+\mobile{(+49) 17641941740}
+\email{florian.vallen@gmail.com}
+\homepage{www.flov.github.io}
+\github{flov}
+\linkedin{florianv}
+ \stackoverflow{611175}{flov}
 % \gitlab{gitlab-id}
-% \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
 % \skype{skype-id}
 % \reddit{reddit-id}
@@ -67,7 +67,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Alexander Lelidis~~~·~~~Curriculum Vitae}
+  {Florian Vallen~~~·~~~Curriculum Vitae}
   {\thepage}
 
 
