--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -11,40 +11,21 @@
 
 %---------------------------------------------------------
   \cventry
-    {Master of computer science (1.3)} % Degree
-    {ETH Zurich} % Institution
-    {Zurich} % Location
-    {Sep. 2017 - Sep. 2020} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Joint Thesis with the University of Cambridge}
-        \item {Focus: Machine Learning and Security}
-      \end{cvitems}
-    }
+    {Bachelor of computer science} % Degree
+    {Heinrich-Heine-University} % Institution
+    {Düsseldorf} % Location
+    {Sep. 2006 - Sep. 2010} % Date(s)
+  \item Erasmus exchange program absolved at technical universityin Madrid
+  \item Thesis: A Comparison Of No SQL And SQL Databases Regarding Development Practices And Performance.
 
 %---------------------------------------------------------
 
 %---------------------------------------------------------
   \cventry
-    {Bachelor of Computer Science (1.9)} % Degree
-    {Technical University Berlin} % Institution
-    {Berlin} % Location
-    {Oct. 2012 - Apr. 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Exchange program at ETH Zurich}
-        \item {Focus: Computer Graphics and Computer Vision}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-
-%---------------------------------------------------------
-  \cventry
-    {High school diploma (German Abitur 2.1)} % Degree
-    {Werner-von-Siemens Gymnasium} % Institution
-    {Berlin} % Location
-    {Mai. 2006 - Mar. 2012} % Date(s)
+    {High school diploma (German Abitur)} % Degree
+    {Albert Einstein Gymnasium} % Institution
+    {Duisburg} % Location
+    {1997 - 2006} % Date(s)
     {}
 
 %---------------------------------------------------------
