--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -10,73 +10,109 @@
 \begin{cventries}
   %---------------------------------------------------------
   \cventry
-    {Research Assistant at CGL/Disney} % Job title
-    {ETH Zurich / Disney Research Studios} % Organization
-    {Zurich, Switzerland} % Location
-    {Fall. 2020 - now} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Development of production-level deep learning code in collaboration with Disney.}
-        \item {Research of smoke stylization method and develop of a Houdini plugin for neural smoke processing.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {ESRI} % Organization
-    {Zurich, Switzerland} % Location
-    {Spring. 2019 - Fall 2020} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Development of urban planning software in the 3D space in the browser using React and the ESRI Js API}
-        \item {Research, design and implementation of streetview integration in ARCGis Urban resulting in two opensource packages on NPM}
-        \item {Planning and execution of telemetry gathering using AWS-Redshift and Metabase increasing user feedback}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {Antavi GmbH} % Organization
-    {Zurich, Switzerland} % Location
-    {Spring. 2016 - Winter 2018} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Design and development of command, control and communication systems in React with live updates via pouchdb}
-        \item {Scalable Backend and API design in Express running on AWS}
-        \item {Processing and visualization of raw GIS data analysis using Mapbox and OSRM}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Research Assistant at IFE} % Job title
-    {Undergraduate Research, Dept. of Information Technology and Electrical Engineering} % Organization
-    {Zurich, Switzerland} % Location
-    {Fall 2014 - Spring 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Getting insights of big mobile crowd GPS data through the implementation of trajectory analysis in Python}
-        \item {Visualization of complex relations by creating web-based software for crowd analysis in Js}
-        \item {Research and development of new analysis methods using GPS data to provide crowd flow direction estimates}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {WeltWeitBau GmbH} % Organization
+    {Next.js Frontend Development} % Job title
+    {HelloBetter} % Organization
     {Berlin, Germany} % Location
-    {Fall 2012 - Spring 2016} % Date(s)
+    {October 2019 - July 2021} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Development of software civil engineering tools in Java and C++}
-        \item {Reducing software quality assurance time by implementing continues integration tests with Selenium}
-        \item {Teaching training courses for the utilisation of the company's products to new clients}
+        \item {Next.js development with typescript}
+        \item {Development of three seperate apps connected with microservices in the backend}
       \end{cvitems}
     }
 
+%---------------------------------------------------------
+  \cventry
+    {Maintainer of a social network for hitchhikers} % Job title
+    {Hitchlog} % Organization
+    {Berlin, Germany} % Location
+    {2013 - present} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {open source hobby project used by over a thousand hitchhikers}
+        \item {TDD Ruby on Rails development of features, bugfixes and testing}
+        \item {Community management}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Ruby software developer, freelancer} % Job title
+    {Devolute, Finiata} % Organization
+    {Berlin, Germany} % Location
+    {September 2017 - February 2018} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item { Rails 5.2 }
+        \item { Creating and testing a service object that communicates with an API of a credit card service }
+        \item { Performance improvement of rails API that communicates with a react app }
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Ruby software developer, freelancer} % Job title
+    {AskCharlie} % Organization
+    {Berlin, Germany} % Location
+    {November. 2015 - August 2016} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Ruby on Rails Development}
+        \item {Applying a redesign to make it more mobile friendly.}
+        \item {Develop a RESTful API in rails that communicates with an Angular app}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Ruby on Rails developer} % Job title
+    {Inspire9} % Organization
+    {Melbourne, Australia} % Location
+    {June 2013 - January 2014} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Ruby on Rails Development}
+        \item {Software Consultancy}
+        \item {Development of a social network with backbone.js}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Ruby on Rails developer} % Job title
+    {Wimdu} % Organization
+    {Berlin, Germany} % Location
+    {May 2012 - July 2012} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Fulltext search engine for listings}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Ruby on Rails developer} % Job title
+    {Wuaki.tv} % Organization
+    {Barcelona, Spain} % Location
+    {October 2010 - March 2011} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Web development}
+        \item {Job queues with delayed job}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Ruby on Rails developer} % Job title
+    {Teambox} % Organization
+    {Barcelona, Spain} % Location
+    {June 2009 - November 2009} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Rails web development}
+      \end{cvitems}
+    }
 
 %---------------------------------------------------------
 \end{cventries}
