--- a/examples/cv/projects.tex
+++ b/examples/cv/projects.tex
@@ -11,60 +11,16 @@
 
 %---------------------------------------------------------
   \cventry
-    {University}
+    {Private}
     {Asteroid field simulation} % Affiliation/role
      % Organization/group
-    {C++, CGAL, OSG} % Location
-    {https://alexus37.github.io/asteroidField/} % Date(s)
+    {Open Source Project} % Location
+    {https://hitchlog.com} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item Realtime N-Body simulation in 3D space with collisions detection and physically correct response computation
-        \item Numerical estimation of gravitational forces using the C++ library CGAL
-        \item Visually pleasing rendering by leveraging OpenSceneGraph
+        \item Development of an open source rails project where users can share and explore hitchhiking experiences.
       \end{cvitems}
     }
 
-%---------------------------------------------------------
-  \cventry
-    {Private}
-    {tripTrackr} % Affiliation/role
-     % Organization/group
-    {Ruby on rails, js, OSG} % Location
-    {https://www.triptrackr.de/} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item Full-stack development of a travel app for Android and IOS, where users can create a personal webpage with their travel trajectory
-        \item Backend development with Ruby on rails and deployment on AWS infrastructure
-      \end{cvitems}
-    }
-
-    %---------------------------------------------------------
-  \cventry
-    {Private}
-    {WebGL interface for the NORI raytracer} % Affiliation/role
-     % Organization/group
-    {Python, Django, three.js} % Location
-    {http://alexus37.github.io/NoriV2Webinterface/} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item Web-based modelling tool and editor for scenes used as input for the physical-based raytracer Nori
-        \item Including a full ecosystem with user management, rest API and server-side rendering running with Django
-        \item Real-time rendering preview using WebSockets with an angular frontend leveraging three.js
-      \end{cvitems}
-    }
-
-    %---------------------------------------------------------
-  \cventry
-    {University}
-    {Thermal augmented reality chess} % Affiliation/role
-     % Organization/group
-    {C++, Python, ROS} % Location
-    {http://alexus37.github.io/pdf/report.pdf} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item Connecting a RGB image stream with a thermal image stream to transform every surface to a touch screen
-        \item Using the RGB camera to track augmented reality marker and use OpenGL to render a chess game
-      \end{cvitems}
-    }
 %---------------------------------------------------------
 \end{cventries}
