--- a/examples/cv/research.tex
+++ b/examples/cv/research.tex
@@ -9,36 +9,15 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
-  %---------------------------------------------------------
-  \cventry
-    {Master thesis} % Role
-    {Invisible to Machine Perception: Attacking Pose Estimators with Attribution Methods} % Event
-    {Zurich, Switzerland} % Location
-    {Mai. 2020} % Date(s)
-    {
-      \begin{cvitems} % Description(s)
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Big Data and Smart Computing (BigComp), 2016 International Conference} % Role
-    {Geometry Representations for Big Geometry Data with Unsupervised Feature Learning} % Event
-    {Hong Kong, China } % Location
-    {Jan. 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s)
-      \end{cvitems}
-    }
-
 %---------------------------------------------------------
   \cventry
     {Bachelor thesis} % Role
-    {Structure-aware Surface Reconstruction with Sparse Moving Least Squares} % Event
-    {Zurich, Switzerland} % Location
-    {Aug. 2015} % Date(s)
+    {A Comparison Of NoSQL And SQL Databases Regarding Development Practices And Performance} % Event
+    {Düsseldorf, Germany} % Location
+    {Aug. 2010} % Date(s)
     {
       \begin{cvitems} % Description(s)
+        This thesis analyses the current development status of NoSql databases. It first describes the general properties of NoSQL databases that can make them a favourable choice. Then it concentrates specifically on document-oriented and key-value stores, which are different kinds of NoSQL databases. The document-oriented database MongoDB has been taken as an example to show the basic functionality of such a NoSQL database.
       \end{cvitems}
     }
 
