--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -12,27 +12,32 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {\textbf{Python}, \textbf{javascript} (ES6), TS, C/\textbf{C++}, Ruby, JAVA, PHP, Assembler (mios, x86), GLSL, Bash} % Skills
+    {\textbf{Ruby}, \textbf{javascript} (ES6), Typescript, Ruby, JAVA, PHP, JRuby } % Skills
 
   \cvskill
     {Databases} % Category
-    {SQL, MongoDB, couchDB, pouchDB, postgres} % Skills
+    {SQL, MongoDB, postgres} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Libaries} % Category
-    {\textbf{PyTorch}, \textbf{Tensorflow}, \textbf{React} (Native), Django, tornado, flask, angular, \textbf{Redux}, \textbf{HTML5}, \textbf{CSS3}, Node.JS, \textbf{leaflet}, \textbf{mapbox}, ros, bootstrap, jquery, Three.js, loadash,  boost, cgal, igl} % Skills
+    {\textbf{Rails}, \textbf{Rspec}, \textbf{Next.js}, \textbf{React} (Native), \textbf{Redux}, \textbf{HTML5}, \textbf{CSS3}, Node.JS, leaflet, bootstrap, jquery, loadash, cucumber } % Skills
 
+
+%---------------------------------------------------------
+  \cvskill
+    {Services} % Category
+    {Heroku, Aptible, Cloud66, AWS S3 } % Skills
 
 %---------------------------------------------------------
   \cvskill
     {General} % Category
-    {SVG, openGL, webGL OSM, OSG, mapbox, OSRM, CAD, ESRI AGO, Metabase} % Skills
+    {TDD, ESP32, micocontrollers} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {English (Full professional proficiency) , German (native language), Spanish (4 years of high school classes), Bulgarian (basic knowledge)} % Skills
+    {English (Full professional proficiency), German (native language), Spanish (good)} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
