--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -15,10 +15,12 @@
     {Heinrich-Heine-University} % Institution
     {Düsseldorf} % Location
     {Sep. 2006 - Sep. 2010} % Date(s)
-  \item Erasmus exchange program absolved at technical universityin Madrid
-  \item Thesis: A Comparison Of No SQL And SQL Databases Regarding Development Practices And Performance.
-
-%---------------------------------------------------------
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Erasmus exchange program absolved at technical universityin Madrid}
+        \item { Thesis: A Comparison Of No SQL And SQL Databases Regarding Development Practices And Performance. }
+      \end{cvitems}
+    }
 
 %---------------------------------------------------------
   \cventry
