--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -40,7 +40,7 @@
 % \photo{./examples/profile.png}
 \name{Florian}{Vallen}
 \position{Software Engineer{\enskip\cdotp\enskip} Web Developer}
-\address{Karl Marx Str. 277, 12057 Berlin, Germany}
+\address{Luetznerstr. 68, 04177 Leipzig, Germany}
 \mobile{(+49) 17641941740}
 \email{florian.vallen@gmail.com}
 \homepage{www.flov.github.io}
