--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -43,10 +43,10 @@
 \address{Luetznerstr. 68, 04177 Leipzig, Germany}
 \mobile{(+49) 17641941740}
 \email{florian.vallen@gmail.com}
-\homepage{www.flov.github.io}
+\homepage{flov.github.io}
 \github{flov}
 \linkedin{florianv}
- \stackoverflow{611175}{flov}
+\stackoverflow{611175}{flov}
 % \gitlab{gitlab-id}
 % \twitter{@twit}
 % \skype{skype-id}
