--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -10,37 +10,53 @@
 \begin{cventries}
   %---------------------------------------------------------
   \cventry
-    {Next.js Frontend Development} % Job title
-    {HelloBetter} % Organization
-    {Berlin, Germany} % Location
-    {October 2019 - July 2021} % Date(s)
+    {Full stack developer with Ruby and React/Next.js} % Job title
+    {New Work SE} % Organization
+    {Hamburg, Germany} % Location
+    {January 2023 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Implementation of GDPR and new laws in context of the new DSA laws}
+        \item {Ruby on Rails maintainmance of admin apps}
         \item {Next.js development with typescript}
-        \item {Development of three seperate apps connected with microservices in the backend}
+        \item {Built fully automated CI/CD pipelines on Github Actions for containerized applications using Docker, Kubernetes and AWS ECR.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Maintainer of a social network for hitchhikers} % Job title
+    {Founder & Software Engineer of a social network for hitchhikers} % Job title
     {Hitchlog} % Organization
     {Berlin, Germany} % Location
     {2013 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {open source hobby project used by over a thousand hitchhikers}
-        \item {TDD Ruby on Rails development of features, bugfixes and testing}
+        \item {My open source hobby project used by over a thousand hitchhikers}
+        \item {Development of Next.js app together with Ruby on Rails api}
+        \item {Test driven development of the Rails API}
         \item {Community management}
+      \end{cvitems}
+    }
+
+  %---------------------------------------------------------
+  \cventry
+    {Next.js Frontend Development} % Job title
+    {HelloBetter} % Organization
+    {Berlin, Germany} % Location
+    {October 2019 - November 2022} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Next.js development with typescript}
+        \item {Development of three seperate next.js apps connected with microservices in the backend}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
     {Ruby software developer, freelancer} % Job title
-    {Devolute, Finiata} % Organization
+    {Devolute, Finiata, Redbull} % Organization
     {Berlin, Germany} % Location
-    {September 2017 - February 2018} % Date(s)
+    {September 2017 - July 2019} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item { Rails 5.2 }
@@ -54,7 +70,7 @@
     {Ruby software developer, freelancer} % Job title
     {AskCharlie} % Organization
     {Berlin, Germany} % Location
-    {November. 2015 - August 2016} % Date(s)
+    {November. 2015 - August 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Ruby on Rails Development}
