--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -25,7 +25,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Founder & Software Engineer of a social network for hitchhikers} % Job title
+    {Founder \& Software Engineer of a social network for hitchhikers} % Job title
     {Hitchlog} % Organization
     {Berlin, Germany} % Location
     {2013 - present} % Date(s)
@@ -43,7 +43,7 @@
     {Next.js Frontend Development} % Job title
     {HelloBetter} % Organization
     {Berlin, Germany} % Location
-    {October 2019 - November 2022} % Date(s)
+    {October 2019 - November 2023} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Next.js development with typescript}
