--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -12,7 +12,11 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {\textbf{Ruby}, \textbf{javascript} (ES6), Typescript, Ruby, JAVA, PHP, JRuby } % Skills
+    {Typescript, Ruby, JAVA } % Skills
+
+  \cvskill
+    {AI} % Category
+    {Usage of Stable Diffusion and Flux together with Comfyui to generate images using a prompt} % Skills
 
   \cvskill
     {Databases} % Category
@@ -21,13 +25,13 @@
 %---------------------------------------------------------
   \cvskill
     {Libaries} % Category
-    {\textbf{Rails}, \textbf{Rspec}, \textbf{Next.js}, \textbf{React} (Native), \textbf{Redux}, \textbf{HTML5}, \textbf{CSS3}, Node.JS, leaflet, bootstrap, jquery, loadash, cucumber } % Skills
+    {\textbf{Next.js}, \textbf{React} (Native), \textbf{GraphQL}, \textbf{Jest}, \textbf{Cypress}, \textbf{Playwright}, \textbf{Rails}, \textbf{Rspec}, tailwind, Node.JS, leaflet, bootstrap, jquery, materialUI, shadcn } % Skills
 
 
 %---------------------------------------------------------
   \cvskill
     {Services} % Category
-    {Heroku, Aptible, Cloud66, AWS S3 } % Skills
+    {Heroku, Aptible, Cloud66, AWS ECR, AWS EC2 } % Skills
 
 %---------------------------------------------------------
   \cvskill
