--- a/examples/cv/projects.tex
+++ b/examples/cv/projects.tex
@@ -18,7 +18,7 @@
     {https://hitchlog.com} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item As a young 19 year old I found hitchhiking as an adventorous way of travelling. Since I found it very interesting to meet people that I would never meet in my day to day life, I founded this app to write about my hitchhiking experiences and the people that I met along the way.
+        \item As a young 19 year old, I found hitchhiking as an adventorous way of travelling. Since I found it very interesting to meet people that I would never meet in my day to day life, I founded this app to write about my hitchhiking experiences and the people that I met along the way.
         \item Development of an open source rails/react project where users can share and explore hitchhiking experiences.
         \item source code is available on https://github.com/flov/hitchlog-api and https://github.com/flov/hitchlog-nextjs
       \end{cvitems}
