Updates from Overleaf

--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -17,8 +17,9 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Implementation of GDPR and new laws in context of the new DSA laws}
-        \item {Ruby on Rails maintainmance of admin apps}
-        \item {Next.js development with typescript}
+        \item {Management of storybook component library}
+        \item {Ruby on Rails maintenance of admin apps}
+        \item {Next.js v15 development using react server components}
         \item {Built fully automated CI/CD pipelines on Github Actions for containerized applications using Docker, Kubernetes and AWS ECR.}
       \end{cvitems}
     }
