--- a/awesome-cv.cls
+++ b/awesome-cv.cls
@@ -575,6 +575,7 @@
       \entrypositionstyle{#1} & \entrydatestyle{#4} \\}
     \multicolumn{2}{L{\textwidth}}{\descriptionstyle{#5}}
   \end{tabular*}%
+  \vspace{3mm}
 }
 
 % Define an environment for cvsubentry
